--- a/web/nginx/default.conf
+++ b/web/nginx/default.conf
@@ -1,5 +1,5 @@
-# NOTE: Create subdomains that point to load balancer for each service and 
-# re-configure proxy_pass arguments
+# NOTE: For a production environment, one should create subdomains 
+# that point to load balancers tasked to proxy requests towards a specific service.
 server {
    listen 80;
    root /srv/www/static;
